tests/valid/merge-multiple-files/duplicate-concept-multiple-ontologies/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if duplicate concept definitions in multiple ontology elements are accepted.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes/>
    <concepts>
      <concept name="a" version="1" description="a" display-name-singular="a" display-name-plural="a"/>
    </concepts>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts>
      <concept name="a" version="1" description="a" display-name-singular="a" display-name-plural="a"/>
    </concepts>
    <eventtypes/>
    <sources/>
  </ontology>
</edxml>
