tests/invalid/event/data-type-bigint-signed-too-large.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Testing object value validation, verify
if a signed big integer of 2^63 is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="number:bigint:signed"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="a" story="a" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources>
      <source uri="/test/" description="a" version="1"/>
    </sources>
  </ontology>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>9223372036854775808</a>
    </properties>
  </event>
</edxml>
